<resources>
    <string name="app_name">Gurubani Darshan</string>
    <string name="question_akalTakhat">Question to AKALTAKHAT SAHIB</string>
    <string name="question_sgpc">Question to S.G.P.C</string>
    <string name="question_heads">Question to Jathedar\'s</string>
    <string name="request_akalTakhat">Request to AKALTAKHAT SAHIB</string>
    <string name="request_sgpc">Request to S.G.P.C</string>
    <string name="request_heads">Request to Jathedar\'s</string>
    <string name="suggestion_akalTakhat">Suggestion to AKALTAKHAT SAHIB</string>
    <string name="suggestion_sgpc">Suggestion to S.G.P.C</string>
    <string name="suggestion_heads">Suggestion to Jathedar\'s</string>
    <string name="Questions">Question \'s to AKALTAKHAT SAHIB</string>
    <string name="Requests">Request to S.G.P.C</string>
    <string name="Suggestions">Give Suggestions</string>
    <string name="post">POST</string>
    <string name="cancel">Cancel</string>
    <string name="history_sgpc">History of SGPC</string>
    <string name="history_AkalTakhat">History of Akal Takhat Sahib</string>
    <string name="pageOne">PageOne</string>
    <string name="pageTrwo">PageTwo</string>
    <string name="pageThree">PageThree</string>
    <string name="pageFour">PageFour</string>
    <string name="pageFive">PageFive</string>
    <string name="pageSix">PageSix</string>
    <string name="title_activity_bani_menus">BaniMenus</string>
    <string name="action_settings">Settings</string>
    <string name="AboutDeveloper">About Us</string>
    <string name="app_descrip">Gurbani Darshan</string>
    <string name="app_credits">Gurbani Darshan Android Application sewa by Sr.Ravisher Singh Ji Khalsa along with AnaadAR Development Team.It Contribute the Single way of life with superior Knowledge of Guru Granth Sahib  to khalsa and Sikh community and All Over the World.Guru Granth Sahib Ji Common Guru Of World with Scientific Knowledge.
        \n\nSpecial Thanks To AkalTakhat Sahib \n Special Thanks to SGPC President along its Members.\n Special Thanks to Jathedars of Five Takhat Sahibs. </string>
    <string-array name="bani_menu">
        <item>jpujI swihb</item>
        <item>jwpu swihb</item>
        <item>Anμdu swihb</item>
        <item>qÍ pRswid sv`Xy</item>
        <item>cOpeI swihb</item>
        <item>rhrwis swihb</item>
        <item>suKmnI swihb</item>
    </string-array>
    <string-array name="GuruSahiban_Menu">
        <item>Guru Nanak Sahib Ji</item>
        <item>Guru Angad Sahib Ji</item>
        <item>Guru Amardas Ji</item>
        <item>Guru Ramdas  Ji</item>
        <item>Guru Arjan Sahib Ji</item>
        <item>Guru Hargobind Sahib Ji</item>
        <item>Guru HarRai Ji</item>
        <item>Guru HarKrishan Ji</item>
        <item>Guru Tegh Bahadur Ji</item>
        <item>Guru Gobind Singh Ji</item>
    </string-array>
    <string name="AkalTakhat"> Created as it is by the great warrior Sri Guru Hargobind Sahib ji, Sri Akal Takht is the nucleus of an all-embracing and outonomous Panthic power. Baba Budha Ji and Bhai Gurdas raised this celestial fabric with their unctuous hands. Politics and religion, designated as they are as miri-piri, bhagati-shakti, symbolise the divine seance of the dyad. Sri Akal Takht has gone a long way in promoting the sentiment of self-respect, freedom in relation to original Gurmat ideas and dauntlessness of the being in any situation. To be sure, the Almighty God ‘Himself’ has established this divine Takht so that one man may not strive to enslave another in the name of caste or religion; country or race, and each man may have the option to lead his life according as his own point of view is. History testifies to the fact that for the realisation of this goal, the struggle as it was launched right from the eighteenth century under the guidance of Sri Akal Takht continues unabated to this day. Whenever and wherever human freedom and self-respect were at stake, the Gursikhs sought inspiration from Akal Takht Sahib. Rightly enough, they bore in mind and upheld the sentiments of a righteous dharma. Echoes of high-spiritedness of the Khalsa and the slogan: ‘The Khalsa shall rule…’ rise from within Sri Akal Takht Sahib and resonate in the sky. From time to time, this very resonance has been striking a terror and shaking the powers that be in their shoes. Indubitably, with a view to crushing the Holy of the Holies Sri Akal Takht Sahib, its ideals and sentiments, every possible mean has been adopted but bootless. Strangely enough, governments have been devoured by the time with a careless gesture. Not a trace is left behind. On the other hand, the saffron flag of Sri Akal Takht Sahib has been ever hoisting and touching skyey heights. Every Gursikh prays to the Almighty for the safety of the khalsa Panth and upholds its lofty ideas. His guardian is Sri Akal Takht Sahib. It is for this reason that any commandment issued from Sri Akal Takht Sahib is welcomed by every Gursikh.</string>
    <string name="SGPC">SHIROMANI GURDWARA PARBANDHAK COMMITTEE\n\n
Teja Singh Samundri Hall, Golden Temple Complex,\n
SRI AMRITSAR\n
EPBX No. (0183-2553957-58-59)\n\n

Fax No.: 0183-2553919\n
Web Site :- www.sgpc.net\n
Internal Exchange No. 200\n
E-mail :- info@sgpc.net\n\n
S.G.P.C. the abbrevation for the SHIROMANI GURDWARA PARBANDHAK COMMITTEE. It is directly elected by an electorate of the Sikh Nation, male and female above 18 years of age who are registered as voters under the provisions of Sikh Gurdwara Act 1925. This act enables SGPC to control all the Historical Gurdwaras as well as Gurdwaras under Section 87 of this act.  The elections to SGPC are held after every five years. SGPC is also called Parliament of the Sikh Nation. Now apart from the management of Gurdwaras, it runs many prestigious educational institutions including Medical colleges, Hospitals and many Charitable trusts. </string>
    <string name="about_sri_akal_takhat_sahib_ji">About Sri Akal Takhat Sahib Ji</string>
    <string name="about_sgpc">About SGPC</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="listen_ardass">Gurbani Ardass</string>
    <string name="listen_rehrass_sahib">Gurbani Rehrass Sahib</string>
    <string name="listen_anand_sahib">Gurbani Anand Sahib</string>
    <string name="listen_chaupai_sahib">Gurbani Chaupai Sahib</string>
    <string name="listen_savaiye_sahib">Gurbani Savaiye Sahib</string>
    <string name="listen_jaap_sahib">Gurbani Jaap Sahib</string>
    <string name="listen_japji_sahib">Gurbani Japji Sahib</string>
    <string name="about">About</string>
    <string name="listen_nitnem_gurbani">Listen Nitnem Gurbani\'s</string>
    <string name="communicate">Communicate</string>
    <string name="sundar_gutka">\nSundar Gutka\nਸੁੰਦਰ ਗੁਟਕਾ</string>
    <string name="dialy_hukamnama">\nHukamnama\nਹੁਕਮਨਾਮਾ</string>
    <string name="guru_sahiban">\nGuru Sahiban\nਗੁਰੂ ਸਾਹਿਬਾਨ</string>
    <string name="library">\nLibrary\nਕਿਤਾਬ ਘਰ</string>
    <string name="live_kirtan">\nLive Kirtan\nਲਾਈਵ ਕੀਰਤਨ</string>
    <string name="monthly_events">\nMonthly Events\nਮਹੀਨਾਵਾਰ ਸਮਾਗਮ</string>
    <string name="yearlu_events">\nYearly Events\nਸਲਾਨਾ ਸਮਾਗਮ</string>
    <string name="special_days">\nSpecial Days\nਵਿਸ਼ੇਸ਼ ਦਿਨ</string>
    <string name="upcoming_events">\nUpcoming Events\nਆਉਣ ਵਾਲੇ ਸਮਾਗਮ</string>
    <string name="contact_us">\nContact Us\nਸੰਪਰਕ ਕਰੋ</string>
    <string name="livetelecasts">\nLive Telecasts\n(Upcoming-ਲਾਈਵ)</string>
    <string name="aim">\nPurpose\nਮਨੋਰਥ</string>
</resources>