<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/akaltakhatsahib"
    android:padding="@dimen/root_padding"
    tools:context="com.akaltakhatsahib.anaadar.akaltakhatsahib.activities.contactUS.questionAndSuggestions.Question">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/background_overlay_fill"
        android:orientation="vertical"
        android:padding="@dimen/root_padding">

        <Button
            android:id="@+id/questionAkalTakhat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_akalTakhat" />

        <Button
            android:id="@+id/questionSGPC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_sgpc" />

        <Button
            android:id="@+id/questionHEAD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_heads" />

    </LinearLayout>
</LinearLayout>
