<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">
        <!-- android:background="@color/background_overlay_fill"-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <!--Dundar Gutka-->
            <Button
                android:id="@+id/this_month"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_layoutlist_10dp"
                android:layout_weight="1"
                android:background="@drawable/tiles_images"
                android:gravity="center"
                android:padding="@dimen/margin_layoutlist_10dp"
                android:text="@string/monthly_events"
                android:textAlignment="center"
                android:textAllCaps="false"
                tools:ignore="ButtonStyle,NestedWeights" />

            <Button
                android:id="@+id/this_year"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_layoutlist_10dp"
                android:layout_weight="1"
                android:background="@drawable/tiles_images"
                android:gravity="center"
                android:padding="@dimen/margin_layoutlist_10dp"
                android:text="@string/yearlu_events"
                android:textAlignment="center"
                android:textAllCaps="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <!--Guru Sahiban-->
            <Button
                android:id="@+id/special_days"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_layoutlist_10dp"
                android:layout_weight="1"
                android:background="@drawable/tiles_images"
                android:drawablePadding="@dimen/margin_layoutlist_10dp"
                android:gravity="center"
                android:padding="@dimen/margin_layoutlist_10dp"
                android:text="@string/special_days"
                android:textAlignment="center"
                android:textAllCaps="false"
                tools:ignore="NestedWeights" />

            <Button
                android:id="@+id/upcoming_event"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_layoutlist_10dp"
                android:layout_weight="1"
                android:background="@drawable/tiles_images"
                android:drawablePadding="@dimen/margin_layoutlist_10dp"
                android:gravity="center"
                android:padding="@dimen/margin_layoutlist_10dp"
                android:text="@string/upcoming_events"
                android:textAlignment="center"
                android:textAllCaps="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <!--Guru Sahiban-->
            <Button
                android:id="@+id/live_video"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_layoutlist_10dp"
                android:layout_weight="1"
                android:background="@drawable/tiles_images"
                android:drawablePadding="@dimen/margin_layoutlist_10dp"
                android:gravity="center"
                android:padding="@dimen/margin_layoutlist_10dp"
                android:text="@string/livetelecasts"
                android:textAlignment="center"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/purpose"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_layoutlist_10dp"
                android:layout_weight="1"
                android:background="@drawable/tiles_images"
                android:drawablePadding="@dimen/margin_layoutlist_10dp"
                android:gravity="center"
                android:padding="@dimen/margin_layoutlist_10dp"
                android:text="@string/aim"
                android:textAlignment="center"
                android:textAllCaps="false"
                tools:ignore="NestedWeights" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>