<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:orientation="vertical"
        android:paddingLeft="45dp"
        android:paddingRight="45dp"
        android:paddingBottom="@dimen/margin_30"
        android:weightSum="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65"
        tools:ignore="UselessParent">
        <!-- android:background="@color/background_overlay_fill"-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="148dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2">
            <!--Dundar Gutka-->
            <Button
                android:id="@+id/sundar_gutka"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/margin_layoutlist_10dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_weight="1"
                android:background="@drawable/tiles_images"
                android:gravity="center"
                android:padding="@dimen/margin_layoutlist_10dp"
                android:text="@string/sundar_gutka"
                android:textAlignment="center"
                android:textAllCaps="false"
                tools:ignore="NestedWeights" />

            <Button
                android:id="@+id/hukamnaam"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/margin_layoutlist_10dp"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_weight="1"
                android:background="@drawable/tiles_images"
                android:gravity="center"
                android:padding="@dimen/margin_layoutlist_10dp"
                android:text="@string/dialy_hukamnama"
                android:textAlignment="center"
                android:textAllCaps="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="148dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2">
            <!--Guru Sahiban-->
            <Button
                android:id="@+id/Guru_Sahiban"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/margin_layoutlist_10dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_weight="1"
                android:background="@drawable/tiles_images"
                android:drawablePadding="@dimen/margin_layoutlist_10dp"
                android:gravity="center"
                android:padding="@dimen/margin_layoutlist_10dp"
                android:text="@string/guru_sahiban"
                android:textAlignment="center"
                android:textAllCaps="false"
                tools:ignore="NestedWeights" />

            <Button
                android:id="@+id/Library"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/margin_layoutlist_10dp"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_weight="1"
                android:background="@drawable/tiles_images"
                android:drawablePadding="@dimen/margin_layoutlist_10dp"
                android:gravity="center"
                android:padding="@dimen/margin_layoutlist_10dp"
                android:text="@string/library"
                android:textAlignment="center"
                android:textAllCaps="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="148dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2">
            <!--Guru Sahiban-->
            <Button
                android:id="@+id/contactUs"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/margin_layoutlist_10dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_weight="1"
                android:background="@drawable/tiles_images"
                android:drawablePadding="@dimen/margin_layoutlist_10dp"
                android:gravity="center"
                android:text="@string/contact_us"
                android:textAlignment="center"
                android:textAllCaps="false"
                tools:ignore="NestedWeights" />

            <Button
                android:id="@+id/live_kirtan"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/margin_layoutlist_10dp"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_weight="1"
                android:background="@drawable/tiles_images"
                android:drawablePadding="@dimen/margin_layoutlist_10dp"
                android:gravity="center"
                android:text="@string/live_kirtan"
                android:textAlignment="center"
                android:textAllCaps="false" />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>